--- a/test.html
+++ b/test.html
@@ -526,37 +526,142 @@
       <div class="subtitle">PREMIUM VERSION</div>
     </div>
 
-   <button class="tg-join-btn" onclick="openPopup()">Join</button>
-
-<div id="tg-popup" class="popup">
-  <div class="popup-content">
-    <h3>Join Telegram Channel</h3>
-    <div class="url-box">
-      <input type="text" id="tg-url" value="https://t.me/DTECHX24" readonly>
-      <button onclick="copyToClipboard()">Copy</button>
+<div class="container">
+  <button class="exquisite-btn" onclick="openPopup()">
+    <span>Join Telegram</span>
+    <div class="icon-wrapper">
+      <svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+        <path d="M12 0C5.373 0 0 5.373 0 12C0 18.627 5.373 24 12 24C18.627 24 24 18.627 24 12C24 5.373 18.627 0 12 0ZM17.579 8.211L16.102 17.056C15.974 17.721 15.621 17.883 15.073 17.587L12.006 15.335L10.569 16.716C10.42 16.865 10.296 16.989 10.009 16.989L10.203 13.842L15.78 8.948C16.027 8.726 15.73 8.603 15.406 8.825L8.539 12.954L5.504 11.941C4.862 11.733 4.85 11.329 5.632 11.011L16.516 6.711C17.055 6.507 17.521 6.822 17.379 7.518L17.579 8.211Z" fill="white"/>
+      </svg>
     </div>
-    <p class="chrome-hint">Paste this URL in Chrome to join</p>
+  </button>
+</div>
+
+<div id="popup" class="popup">
+  <div class="popup-content">
+    <div class="popup-header">
+      <h3>Join Our Telegram Channel</h3>
+      <button class="close-btn" onclick="closePopup()">✕</button>
+    </div>
+    <div class="url-container">
+      <div class="url-display">
+        <svg viewBox="0 0 24 24" width="20" height="20">
+          <path d="M21.15,2.85a2.89,2.89,0,0,0-4.1,0L13.25,6.65,8.19,1.59a.5.5,0,0,0-.85.35V7.5a.5.5,0,0,0,.5.5H14.06a.5.5,0,0,0,.35-.85L10.35,3.75l3.8-3.8A2.9,2.9,0,0,0,21.15,2.85ZM17.5,8A7.5,7.5,0,1,1,10,.5,7.5,7.5,0,0,1,17.5,8Z" fill="#229ED9"/>
+          <path d="M13.5,4a.5.5,0,0,1-.5.5h-3a.5.5,0,0,1,0-1h3A.5.5,0,0,1,13.5,4Z" fill="#229ED9"/>
+        </svg>
+        <input type="text" id="telegram-url" value="https://t.me/DTECHX24" readonly>
+      </div>
+      <button class="copy-btn" onclick="copyUrl()">
+        <span>Copy</span>
+        <svg viewBox="0 0 24 24" width="18" height="18">
+          <path d="M20 2H10c-1.103 0-2 .897-2 2v4H4c-1.103 0-2 .897-2 2v10c0 1.103.897 2 2 2h10c1.103 0 2-.897 2-2v-4h4c1.103 0 2-.897 2-2V4c0-1.103-.897-2-2-2zM4 20V10h10l.002 10H4zm16-6h-4v-4c0-1.103-.897-2-2-2h-4V4h10v10z" fill="white"/>
+        </svg>
+      </button>
+    </div>
+    <p class="hint">Paste this URL in Chrome to join our channel</p>
+    <div class="action-btns">
+      <button class="secondary-btn" onclick="closePopup()">Cancel</button>
+      <button class="primary-btn" onclick="window.open('https://t.me/DTECHX24', '_blank'); closePopup();">
+        Open in Telegram
+      </button>
+    </div>
   </div>
 </div>
 
 <style>
-.tg-join-btn {
-  padding: 12px 28px;
-  background: linear-gradient(135deg, #2AABEE, #229ED9);
-  color: white;
-  border: none;
-  border-radius: 8px;
-  font-family: 'Segoe UI', sans-serif;
-  font-weight: 600;
-  font-size: 16px;
-  cursor: pointer;
-  box-shadow: 0 4px 15px rgba(33, 150, 243, 0.3);
-  transition: all 0.3s;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: 'Segoe UI', 'SF Pro Display', -apple-system, BlinkMacSystemFont, sans-serif;
 }
 
-.tg-join-btn:hover {
-  transform: translateY(-2px);
-  box-shadow: 0 6px 20px rgba(33, 150, 243, 0.4);
+body {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
+  background: linear-gradient(135deg, #1a2a6c, #b21f1f, #1a2a6c);
+  background-size: 400% 400%;
+  animation: gradientBG 15s ease infinite;
+  padding: 20px;
+}
+
+@keyframes gradientBG {
+  0% { background-position: 0% 50%; }
+  50% { background-position: 100% 50%; }
+  100% { background-position: 0% 50%; }
+}
+
+.container {
+  text-align: center;
+  padding: 30px;
+  background: rgba(255, 255, 255, 0.1);
+  backdrop-filter: blur(10px);
+  border-radius: 20px;
+  box-shadow: 0 15px 35px rgba(0, 0, 0, 0.2);
+  border: 1px solid rgba(255, 255, 255, 0.1);
+}
+
+.exquisite-btn {
+  position: relative;
+  padding: 18px 45px 18px 30px;
+  background: linear-gradient(135deg, #2AABEE 0%, #229ED9 100%);
+  color: white;
+  border: none;
+  border-radius: 12px;
+  font-weight: 600;
+  font-size: 18px;
+  cursor: pointer;
+  box-shadow: 0 8px 25px rgba(33, 150, 243, 0.4);
+  transition: all 0.4s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+  overflow: hidden;
+  display: flex;
+  align-items: center;
+  gap: 15px;
+}
+
+.exquisite-btn:before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: -100%;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(90deg, transparent, rgba(255,255,255,0.2), transparent);
+  transition: 0.5s;
+}
+
+.exquisite-btn:hover:before {
+  left: 100%;
+}
+
+.exquisite-btn:hover {
+  transform: translateY(-5px) scale(1.03);
+  box-shadow: 0 12px 35px rgba(33, 150, 243, 0.6);
+}
+
+.exquisite-btn:active {
+  transform: translateY(0) scale(0.98);
+}
+
+.icon-wrapper {
+  position: absolute;
+  right: 20px;
+  top: 50%;
+  transform: translateY(-50%);
+  background: rgba(255,255,255,0.2);
+  width: 40px;
+  height: 40px;
+  border-radius: 10px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: all 0.3s ease;
+}
+
+.exquisite-btn:hover .icon-wrapper {
+  transform: translateY(-50%) rotate(10deg) scale(1.1);
 }
 
 .popup {
@@ -567,54 +672,201 @@
   width: 100%;
   height: 100%;
   background: rgba(0,0,0,0.7);
+  backdrop-filter: blur(5px);
   justify-content: center;
   align-items: center;
   z-index: 1000;
+  opacity: 0;
+  transition: opacity 0.3s ease;
 }
 
 .popup-content {
-  background: white;
-  padding: 25px 30px;
-  border-radius: 12px;
-  width: 320px;
+  background: linear-gradient(135deg, rgba(255,255,255,0.95), rgba(245,248,250,0.95));
+  padding: 35px;
+  border-radius: 25px;
+  width: 90%;
+  max-width: 450px;
   text-align: center;
-  box-shadow: 0 10px 30px rgba(0,0,0,0.3);
+  box-shadow: 0 25px 50px rgba(0,0,0,0.3);
+  position: relative;
+  overflow: hidden;
+  transform: translateY(20px);
+  transition: transform 0.4s cubic-bezier(0.175, 0.885, 0.32, 1.275);
 }
 
-.url-box {
+.popup.show {
   display: flex;
-  margin: 20px 0;
+  opacity: 1;
 }
 
-.url-box input {
+.popup.show .popup-content {
+  transform: translateY(0);
+}
+
+.popup-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 25px;
+  padding-bottom: 15px;
+  border-bottom: 1px solid rgba(34, 158, 217, 0.2);
+}
+
+.popup-header h3 {
+  color: #1a1a2e;
+  font-weight: 700;
+  font-size: 22px;
+  letter-spacing: -0.5px;
+}
+
+.close-btn {
+  background: none;
+  border: none;
+  font-size: 24px;
+  cursor: pointer;
+  color: #888;
+  transition: color 0.3s;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.close-btn:hover {
+  color: #ff4757;
+  background: rgba(255, 71, 87, 0.1);
+}
+
+.url-container {
+  display: flex;
+  gap: 10px;
+  margin: 25px 0;
+}
+
+.url-display {
   flex: 1;
-  padding: 10px 15px;
-  border: 1px solid #ddd;
-  border-radius: 6px 0 0 6px;
-  font-size: 14px;
+  display: flex;
+  align-items: center;
+  background: white;
+  padding: 15px 20px;
+  border-radius: 12px;
+  box-shadow: 0 5px 15px rgba(0,0,0,0.05);
+  border: 1px solid rgba(34, 158, 217, 0.3);
 }
 
-.url-box button {
-  padding: 10px 16px;
-  background: #229ED9;
+.url-display input {
+  flex: 1;
+  padding: 0 15px;
+  border: none;
+  background: transparent;
+  font-size: 16px;
+  color: #1a1a2e;
+  outline: none;
+}
+
+.copy-btn {
+  display: flex;
+  align-items: center;
+  gap: 8px;
+  padding: 0 25px;
+  background: linear-gradient(135deg, #229ED9 0%, #1A93D1 100%);
   color: white;
   border: none;
-  border-radius: 0 6px 6px 0;
+  border-radius: 12px;
+  font-weight: 600;
   cursor: pointer;
-  transition: background 0.2s;
+  transition: all 0.3s ease;
+  box-shadow: 0 5px 15px rgba(33, 150, 243, 0.3);
 }
 
-.url-box button:hover {
-  background: #1d8bc4;
+.copy-btn:hover {
+  transform: translateY(-2px);
+  box-shadow: 0 8px 20px rgba(33, 150, 243, 0.4);
 }
 
-.chrome-hint {
-  font-size: 13px;
+.copy-btn:active {
+  transform: translateY(0);
+}
+
+.hint {
   color: #666;
-  margin-top: 5px;
+  font-size: 14px;
+  margin-top: 15px;
   font-style: italic;
 }
+
+.action-btns {
+  display: flex;
+  gap: 15px;
+  margin-top: 30px;
+}
+
+.primary-btn, .secondary-btn {
+  flex: 1;
+  padding: 15px;
+  border: none;
+  border-radius: 12px;
+  font-weight: 600;
+  cursor: pointer;
+  transition: all 0.3s ease;
+}
+
+.primary-btn {
+  background: linear-gradient(135deg, #2AABEE 0%, #229ED9 100%);
+  color: white;
+  box-shadow: 0 5px 15px rgba(33, 150, 243, 0.3);
+}
+
+.primary-btn:hover {
+  transform: translateY(-3px);
+  box-shadow: 0 8px 20px rgba(33, 150, 243, 0.4);
+}
+
+.secondary-btn {
+  background: transparent;
+  color: #229ED9;
+  border: 2px solid #229ED9;
+}
+
+.secondary-btn:hover {
+  background: rgba(34, 158, 217, 0.1);
+}
 </style>
+
+<script>
+function openPopup() {
+  const popup = document.getElementById('popup');
+  popup.classList.add('show');
+  document.getElementById('telegram-url').select();
+}
+
+function closePopup() {
+  const popup = document.getElementById('popup');
+  popup.classList.remove('show');
+}
+
+function copyUrl() {
+  const url = document.getElementById('telegram-url');
+  url.select();
+  navigator.clipboard.writeText(url.value);
+  
+  const copyBtn = document.querySelector('.copy-btn');
+  copyBtn.innerHTML = '<span>Copied!</span> <svg viewBox="0 0 24 24" width="18" height="18"><path d="M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z" fill="white"/></svg>';
+  
+  setTimeout(() => {
+    copyBtn.innerHTML = '<span>Copy</span> <svg viewBox="0 0 24 24" width="18" height="18"><path d="M20 2H10c-1.103 0-2 .897-2 2v4H4c-1.103 0-2 .897-2 2v10c0 1.103.897 2 2 2h10c1.103 0 2-.897 2-2v-4h4c1.103 0 2-.897 2-2V4c0-1.103-.897-2-2-2zM4 20V10h10l.002 10H4zm16-6h-4v-4c0-1.103-.897-2-2-2h-4V4h10v10z" fill="white"/></svg>';
+  }, 2000);
+}
+
+// Close popup when clicking outside
+window.addEventListener('click', (e) => {
+  if(e.target.classList.contains('popup')) {
+    closePopup();
+  }
+});
+</script>
 
 <script>
 function openPopup() {
