--- a/anime.html
+++ b/anime.html
@@ -7,11 +7,10 @@
     body { font-family: Arial, sans-serif; background: #111; color: #fff; margin: 0; padding: 20px; }
     img { max-width: 200px; border-radius: 8px; }
     #anime-meta { display: flex; gap: 20px; margin-bottom: 30px; flex-wrap: wrap; }
-    #episode-list iframe { width: 100%; height: 400px; border: none; display: none; margin-bottom: 10px; }
     .episode-btn { background: #333; color: white; padding: 10px; margin: 5px 0; border: none; cursor: pointer; width: 100%; border-radius: 4px; }
     .episode-btn:hover { background: #444; }
-    #loading { display: none; margin: 20px 0; color: yellow; font-weight: bold; }
     #go-back { margin-bottom: 20px; background: red; color: white; padding: 8px 12px; border: none; cursor: pointer; border-radius: 4px; }
+    a.mal-link { color: cyan; font-weight: bold; display: inline-block; margin-top: 10px; }
   </style>
 </head>
 <body>
@@ -19,20 +18,18 @@
   <button id="go-back" onclick="history.back()">❌ Back</button>
 
   <div id="anime-meta">
-    <img id="anime-image" src="" alt="Anime Cover">
+    <img id="anime-image" src="" alt="Anime Cover" />
     <div>
       <h1 id="anime-title"></h1>
       <h3 id="anime-japanese"></h3>
       <p id="anime-score"></p>
       <p id="anime-synopsis"></p>
-      <a id="mal-link" href="" target="_blank" style="color:cyan;">View on MyAnimeList</a>
+      <a id="mal-link" href="" target="_blank" class="mal-link">View on MyAnimeList</a>
     </div>
   </div>
 
   <h2>Episodes</h2>
   <div id="episode-buttons"></div>
-  <div id="loading">⏳ Loading video...</div>
-  <div id="iframe-container"></div>
 
   <script>
     const id = new URLSearchParams(location.search).get("id");
@@ -42,8 +39,6 @@
       "adventure.json", "sci-fi.json", "drama.json",
       "comedy.json", "fantasy.json"
     ];
-
-    let foundAnime = null;
 
     async function findAnime() {
       for (const src of sources) {
@@ -65,8 +60,6 @@
         return;
       }
 
-      foundAnime = anime;
-
       document.getElementById("anime-image").src = anime.metadata.image;
       document.getElementById("anime-title").innerText = anime.metadata.title;
       document.getElementById("anime-japanese").innerText = anime.metadata.japanese_title;
@@ -75,25 +68,18 @@
       document.getElementById("mal-link").href = anime.metadata.url;
 
       const buttonsDiv = document.getElementById("episode-buttons");
-      const iframeContainer = document.getElementById("iframe-container");
-      const loader = document.getElementById("loading");
 
       anime.episodes.forEach(ep => {
         const btn = document.createElement("button");
         btn.className = "episode-btn";
         btn.innerText = ep.episode;
-        btn.onclick = () => {
-          iframeContainer.innerHTML = "";
-          loader.style.display = "block";
 
-          setTimeout(() => {
-            loader.style.display = "none";
-            const div = document.createElement("div");
-            div.innerHTML = ep.iframe;
-            iframeContainer.appendChild(div);
-            div.querySelector("iframe").style.display = "block";
-          }, 5000);
+        btn.onclick = () => {
+          // Encode iframe HTML and redirect to player.html with iframe param
+          const encodedIframe = btoa(encodeURIComponent(ep.iframe));
+          window.location.href = `player.html?iframe=${encodedIframe}`;
         };
+
         buttonsDiv.appendChild(btn);
       });
     });
