--- a/test.html
+++ b/test.html
@@ -772,7 +772,7 @@
   </div>
 
   <script>
-    const sections = ["popular", "action", "slice_of_life", "sci-fi", "drama", "comedy", "fantasy"];
+    const sections = ["popular", "action", "slice_of_life", "sci-fi", "drama", "comedy", "fantasy", "all"];
     let allAnime = [];
     let allAnimeLoaded = false;
     let currentGenreFilter = "all";
