--- a/test.html
+++ b/test.html
@@ -715,10 +715,10 @@
     <section class="genre-section">
       <div class="section-header">
         <h2 class="section-title">
-          <i class="fas fa-dragon section-icon"></i> Fantasy
+          <i class="fas fa-dragon section-icon"></i> horror
         </h2>
       </div>
-      <div class="horizontal-scroll" id="fantasy">
+      <div class="horizontal-scroll" id="horror">
         <div class="loading">
           <div class="spinner"></div>
           Loading...
@@ -772,7 +772,7 @@
   </div>
 
   <script>
-    const sections = ["popular", "action", "slice_of_life", "sci-fi", "drama", "comedy", "fantasy", "all"];
+    const sections = ["popular", "action", "slice_of_life", "sci-fi", "drama", "comedy", "fantasy", "all", "horror"];
     let allAnime = [];
     let allAnimeLoaded = false;
     let currentGenreFilter = "all";
