--- a/test.html
+++ b/test.html
@@ -656,6 +656,20 @@
       </div>
     </section>
 
+  <section class="genre-section">
+  <div class="section-header">
+    <h2 class="section-title">
+      <i class="fas fa-map-signs section-icon"></i> Adventure
+    </h2>
+  </div>
+  <div class="horizontal-scroll" id="adventure">
+    <div class="loading">
+      <div class="spinner"></div>
+      Loading...
+    </div>
+  </div>
+</section>
+
     <section class="genre-section">
       <div class="section-header">
         <h2 class="section-title">
@@ -715,10 +729,10 @@
     <section class="genre-section">
       <div class="section-header">
         <h2 class="section-title">
-          <i class="fas fa-dragon section-icon"></i> horror
+          <i class="fas fa-dragon section-icon"></i> fantasy
         </h2>
       </div>
-      <div class="horizontal-scroll" id="horror">
+      <div class="horizontal-scroll" id="fantasy">
         <div class="loading">
           <div class="spinner"></div>
           Loading...
@@ -772,7 +786,7 @@
   </div>
 
   <script>
-    const sections = ["popular", "action", "slice_of_life", "sci-fi", "drama", "comedy", "fantasy", "all", "horror"];
+    const sections = ["popular", "action", "slice_of_life", "sci-fi", "drama", "comedy", "fantasy", "all", "horror", "advanture", "all2", "all3", "all4"];
     let allAnime = [];
     let allAnimeLoaded = false;
     let currentGenreFilter = "all";
