--- a/test.html
+++ b/test.html
@@ -727,6 +727,20 @@
     </section>
 
     <section class="genre-section">
+  <div class="section-header">
+    <h2 class="section-title">
+      <i class="fas fa-ghost section-icon"></i> Horror
+    </h2>
+  </div>
+  <div class="horizontal-scroll" id="horror">
+    <div class="loading">
+      <div class="spinner"></div>
+      Loading...
+    </div>
+  </div>
+</section>
+
+    <section class="genre-section">
       <div class="section-header">
         <h2 class="section-title">
           <i class="fas fa-dragon section-icon"></i> fantasy
