--- a/test.html
+++ b/test.html
@@ -800,7 +800,7 @@
   </div>
 
   <script>
-    const sections = ["popular", "action", "slice_of_life", "sci-fi", "drama", "comedy", "fantasy", "all", "horror", "advanture", "all2", "all3", "all4"];
+    const sections = ["popular", "action", "slice_of_life", "sci-fi", "drama", "comedy", "fantasy", "all", "horror", "adventure", "all2", "all3", "all4"];
     let allAnime = [];
     let allAnimeLoaded = false;
     let currentGenreFilter = "all";
