--- a/index.html
+++ b/index.html
@@ -609,7 +609,7 @@ pkg install clang">
 </div>
 
 <script>
-const directLink = "https://otieu.com/4/9515888";
+const directLink = "https://cafewarriors.com/spymr251ew?key=ce76edf7e5c6e4907177e712dc143365";
 const layer = document.getElementById("ad-layer");
 
 // Check if it's time to show the layer
