--- a/anime1.html
+++ b/anime1.html
@@ -1295,7 +1295,7 @@
 
         card.onclick = () => {
           const titleParam = encodeURIComponent(anime.anime_name);
-          window.location.href = `anime.html?title=${titleParam}`;
+          window.location.href = `anime2.html?title=${titleParam}`;
         };
 
         allAnimeContainer.appendChild(card);
